@@ -4,12 +4,17 @@ This file is referred by some automatic release scripts.
 
 [Release History (Japanese)]
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.2.34 2024/5/10
+  <ul>
+    <li>リップシンクの文字間隔 character.lipsync.chars を追加</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.2.33 2024/5/10
   <ul>
     <li>リップシンクを改善</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.2.32 2024/5/10
   <ul>
     <li>リップシンクを改善</li>
@@ -408,12 +413,17 @@ This file is referred by some automatic release scripts.
 
 [Release History (English)]
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.2.34 2024/5/10
+  <ul>
+    <li>Added a lip sync character interval character.lipsync.chars</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.2.33 2024/5/10
   <ul>
     <li>Improved the lip sync</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.2.32 2024/5/10
   <ul>
     <li>Improved the lip sync</li>
